--- a/AI Image Generator/style.css
+++ b/AI Image Generator/style.css
@@ -221,3 +221,20 @@ body {
  box-shadow: 0 4px 10px rgba(109, 40, 217, 0.3);
 }
 
+.main-content .gallery-grid {
+  display: grid;
+  gap: 15px;
+  margin-top: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+}
+
+/* .gallery-grid .img-card{
+  position: relative;
+  overflow: hidden;
+  aspect-ratio: 1;
+  border-radius: 16px;
+  background-color: var(--color-input);
+  border: 1px solid var(--color-border);
+} */
+
+
